--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,6 @@
         }
     ],
     "minimum-stability": "dev",
-    "repositories":
-    [
-        {
-            "type": "vcs",
-            "url": "https://github.com/payneteasy/php-library-payneteasy-api"
-        }
-    ],
     "require":
     {
         "php":                                      ">=5.3.0",
@@ -44,5 +37,12 @@
             "LICENSE",
             "README.md"
         ]
+    },
+    "extra":
+    {
+        "branch-alias":
+        {
+            "dev-master": "1.0.0-dev"
+        }
     }
 }
